src/objects/Change_Management__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allowed_Days__c</fullName>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <picklist>
            <picklistValues>
                <fullName>Change Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change DueDate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>ApprovalStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <label>Approval Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Task1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Task3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Task4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_process_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver process complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Number__c</fullName>
        <label>Audit Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Unit1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAPA_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA Number</label>
        <referenceTo>CAPA__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CR_Approval_Required__c</fullName>
        <description>Is approvel required or not</description>
        <label>CR Approval Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChangeFieldApprovalStatus__c</fullName>
        <label>ChangeFieldApprovalStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Justification__c</fullName>
        <label>Change Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Change_Request_Scope__c</fullName>
        <label>Change Request Scope</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Change_Request_Type__c</fullName>
        <label>Change Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>OR(ISPICKVAL( Status__c , &apos;Closed&apos;),ISPICKVAL( Status__c , &apos;Void&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentApprovalSequenceNumber__c</fullName>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Revision__c</fullName>
        <label>Current Revision</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Change__c</fullName>
        <formula>ISPICKVAL( Status__c , &apos;Document Change Order&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <formula>Document_Profile__r.Document_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Profile</label>
        <referenceTo>Document_Profile__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Followers__c</fullName>
        <label>Followers</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Impacted_Sites__c</fullName>
        <label>Impacted Sites</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created for submitter used in approval class/trigger</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMg_Task3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiating_Site_Name__c</fullName>
        <formula>Initiating_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiating Site</label>
        <referenceTo>Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsRejected_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRejected__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NC_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NC Number</label>
        <referenceTo>Non_Conformance__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Due_Date__c</fullName>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_To_Approver_Owner_DueDate__c</fullName>
        <label>Note To Approver Owner/DueDate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_To_Approver__c</fullName>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.LastName &amp;&quot; &quot;&amp; Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_ManagementTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority</label>
        <referenceTo>Risk_Priority__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <formula>Process__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <description>Created for the record type name of CM and used in the CR_Trigger_Handler class.</description>
        <label>RecordTypeName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <label>Rejection Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution_Closed_Comment__c</fullName>
        <label>Resolution Closed Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <picklist>
            <picklistValues>
                <fullName>No Action Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Change Order</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence_Position__c</fullName>
        <description>Used for finding the current sequence</description>
        <label>Sequence Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Severity</label>
        <referenceTo>Risk_Severity__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Document</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UD_Date__c</fullName>
        <label>UD_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UD_RichText__c</fullName>
        <label>UD RichText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UD_Text11__c</fullName>
        <label>UD Text11</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UD_Text__c</fullName>
        <label>UD_Text</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UD__c</fullName>
        <label>UD_RichText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UD_picklist11__c</fullName>
        <label>UD_picklist11</label>
        <picklist>
            <picklistValues>
                <fullName>1bk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2bk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3bk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UD_picklist__c</fullName>
        <label>UD_picklist</label>
        <picklist>
            <picklistValues>
                <fullName>tables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ladders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>chairs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UD_textarea__c</fullName>
        <label>UD_textarea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>currenappSequenceNumber__c</fullName>
        <description>Current approver sequence number</description>
        <label>currenappSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Change Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Closed__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Audit_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>CR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Management</pluralLabel>
    <recordTypes>
        <fullName>Document</fullName>
        <active>true</active>
        <label>Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Process</fullName>
        <active>true</active>
        <label>Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allowed_days_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Allowed_Days__c)</errorConditionFormula>
        <errorMessage>Allowed days is required</errorMessage>
    </validationRules>
</CustomObject>